java-webapp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp
  namespace: java-pipeline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-webapp
  template:
    metadata:
      labels:
        app: java-webapp
    spec:
      containers:
        - name: java-webapp
          image: image-registry.openshift-image-registry.svc:5000/java-pipeline/java-webapp-build:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
