java-webapp/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: java-webapp
  namespace: java-pipeline
spec:
  to:
    kind: Service
    name: java-webapp
  port:
    targetPort: 8080
  tls:
    termination: edge
